--- a/inbo.Rmd
+++ b/inbo.Rmd
@@ -9,6 +9,7 @@ output:
     theme: vlaanderen
     cover: "Image00012.png"
     cover_hoffset: "-30mm"
+    toc: FALSE
 ---
 
 ```{r include = FALSE}
@@ -44,7 +45,7 @@ science <- staff - admin - sum(wo)
 
 - INBO collects and provides data for international reporting
 - Participates in (inter)national research networks
-    - [LTER](https://lternet.edu): the Long Term Ecologisch Research network
+    - [LTER](https://lternet.edu): the Long Term Ecological Research network
     - [LifeWatch](http://www.lifewatch.eu): e-Science and Technology European Infrastructure for Biodiversity and Ecosystem Research 
     - [ALTER-Net](http://www.alter-net.info): A Long-Term Biodiversity, Ecosystem and Awareness Research Network
     - ...
@@ -57,3 +58,45 @@ science <- staff - admin - sum(wo)
     1. Laboratory  (`r wo["Lab"]`)
     1. IT operations & development  (`r wo["ICT"]`)
     1. Library  (`r wo["Bib"]`)
+
+# Biometrics & Quality assurance
+
+## A scientific corporate identity and quality assurance
+
+- creating, evaluating and adjusting procedures
+    - harmonising protocols for data collection
+    - validation of data through statistical modelling
+- improving reproducibility
+    - scripted analysis (R)
+    - dynamic documents (RMarkdown)
+    - version control (git)
+- gradual change!
+    - focus on early adopters and early majority
+    - stimulation and support is vital
+    - new procedures should lower the burden in the long run
+    - allow for a long transition period before enforcing change
+
+## Creating a methodological platform
+
+- maintaining tools
+    - software, manuals, documentation, books, ...
+    - templates for basic analyses
+    - corporate identity styles for graphics (ggplot2) and dynamics documents (markdown, LaTeX, HTML)
+- implementing methodologies
+    - standardise analyses with focus on long term monitoring and common experiments
+    - testing new analysis techniques
+    - developing new analysis techniques
+- improving self-reliance of scientists
+    - internal statistics courses ranging from "stats 101" to generalised linear mixed models
+    - offer scientists tools to help themselves and each other: websites, webinars, books, ...
+
+## Support and services
+
+- consultancy
+    - help desk: ad hoc questions on statistical techniques and R
+    - sounding board: critical reflection on research goals, experimental design, statistical analysis, ...
+- expertise assignments
+    - experimental design: spatio-temporal resolution, sample size calculation, financial impact, ...
+    - complex analyses requiring a full-fledged statistician
+- quality control
+    - scientists can ask for a review of their code
