--- a/inbo.Rmd
+++ b/inbo.Rmd
@@ -36,10 +36,6 @@ science <- staff - admin - sum(wo)
 - supports
     - agencies of Flemish government related with countryside or nature within urban areas
     - organisations involved in nature conservation, forestry, agriculture, hunting and fishery
-- `r staff` staff
-    - `r science` scientific staff (scientists + technicians)
-    - `r sum(wo)` support for scientific staff
-    - `r admin` management + administrative staff
 
 ## Data collection and provision
 
@@ -50,8 +46,16 @@ science <- staff - admin - sum(wo)
     - [ALTER-Net](http://www.alter-net.info): A Long-Term Biodiversity, Ecosystem and Awareness Research Network
     - ...
 
-## Support for scientific staff
+## Organigram
 
+![](organigram.png)
+
+## Staff
+
+- `r staff` staff
+    - `r science` scientific staff (scientists + technicians)
+    - `r sum(wo)` support for scientific staff
+    - `r admin` management + administrative staff
 - 5 specialised teams dedicated to support the scientific staff
     1. Biometry, Methodology & Quality assurance (`r wo["BMK"]`)
     1. Open data & open research (`r wo["Data"]`)
